2010-03-15  Tobias Liebig  <mail_typo3@etobi.de>

	* Follow-up to #1104: fix 'required' validation for IRRE records

2010-03-14  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13283: Thumbnail generation broken for PDF files (thanks to Michael Stucki & Andy Grunwald)

2010-03-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9218: htmlArea RTE: "Remove format" messes up some inline formats

2010-03-06  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #1104: Setting file fields in TCA to "required" makes it impossible to save the record (thanks to Ingmar Schlecht & Tobias Liebig)

2010-03-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13057: htmlArea RTE sometimes deletes contents

2010-03-04  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13554: Web>View on mount pages via backend (thanks to Georg Ringer)

2010-02-27  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8191: IRRE - Storing data crashes somehow with MM tables (thanks to Peter Kuehn & Franz Koch)

2010-02-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13258: Make TYPO3 v4.2 work again with PHP 5.1 (was broke since the case since 4.2.11)
	* Fixed bug #13470: Session/Login not working in IE8 across subdomains 

2010-02-24  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13637: [EM] Upload to TER is broken

2010-02-23  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.2.12

2010-02-23  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13394: Information disclosure in sysext:sys_actions (thanks to Georg Ringer)
	* Fixed bug #13042: XSS in index.php (thanks to Georg Ringer)
	* Fixed bug #11617: XSS in template module (thanks to Georg Ringer)
	* Fixed bug #13249: XSS in TS Object Browser (thanks to Marcus Krause)
	* Fixed bug #11621: XSS vulnerabilities in workspace module (thanks to Georg Ringer)
	* Fixed bug #11620: XSS vulnerability in task center module (thanks to Georg Ringer)
	* Fixed bug #12628: XSS in sysext sys_action (thanks to Georg Ringer)